main page sketched out

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,155 @@
 		<div class="herotext-container">
 			<p class="herotext">My name is <span class="FtG">Whitney</span>,</p>
 			<p class="herotext">but my friends call me</p>
-			<p class="herotext"><span class="FtG">Code Liberace</span>.</p>
+			<p class="herotext"><span class="FtG">the Code Liberace</span>.</p>
+		</div>
+
+		<div class="row nav">
+			<a class="contact-btn button" href="#skills">SKILLS</a>			
+			<a class="work-btn button" href="#work">WORK</a>
+			<a class="about-btn button" href="#about">ABOUT</a>
+		</div>
+
+		<div class="row" id="skills">
+			<h2>SKILLS</h2>
+
+			<div class="medium-4 columns">
+				<h5>WEB & DESIGN</h5>
+				<hr>
+				<div class="small-6 tiny">
+					<ul>
+						<li>Git</li>
+						<li>Sass</li>
+						<li>HTML5</li>
+						<li>CSS3</li>
+						<li>Bourbon</li>
+						<li>Typography</li>						
+					</ul>
+				</div>
+				<div class="small-6 tiny">
+					<ul>
+						<li>Lightroom</li>
+						<li>Photoshop</li>
+						<li>Illustrator</li>
+						<li>Photography</li>
+						<li>Brand Management</li>
+						<li>Responsive Design</li>					
+					</ul>
+				</div>
+
+			</div>
+
+			<div class="medium-4 columns">
+				<h5>DEVELOPMENT</h5>
+				<hr>
+				<div class="small-6 tiny">
+					<ul>
+						<li>NPM</li>
+						<li>TDD</li>
+						<li>Gulp</li>
+						<li>AJAX</li>
+						<li>Bower</li>
+						<li>Grunt</li>
+						<LI>Parse</LI>
+						<li>Bower</li>
+						<li>jQuery</li>
+					</ul>
+				</div>
+				<div class="small-6 tiny">
+					<ul>
+
+						<li>Yeoman</li>
+						<li>Bourbon</li>
+						<li>Homebrew</li>
+						<li>Backbone.js</li>
+						<li>Underscore.js</li>
+						<li>ZURB Foundation</li>
+						<li>Chrome Dev Tools</li>
+						<li>Command Line Tools</li>
+						<li>Responsive Design</li>
+					</ul>
+				</div>
+				
+			</div>
+
+			<div class="medium-4 columns">
+				<h5>TEAM WORK</h5>
+				<hr>
+				<div class="small-6 tiny">
+					<ul>
+						<li>Copywriting</li>
+						<li>Social Media</li>
+						<li>Remote Work</li>
+					</ul>
+				</div>
+				<div class="small-6 tiny">
+					<ul>
+						<li>Scope & Budget</li>
+						<li>Content Strategy</li>
+						<li>Project Management</li>
+					</ul>					
+				</div>
+			
+				<h5>LANGUAGES</h5>
+				<hr>
+				<ul>
+					<li>English</li>
+					<li>German</li>
+					<li>JavaScript</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="row" id="work">
+			<h2>WORK</h2>
+		</div>
+
+		<div class="row" id="about">
+			<h2>ABOUT</h2>
+			<p>My name is Whitney.</p>
+			<p>I develop clean, simple solutions that speak across boundaries.</p>
+			<p>I call Greenville, South Carolina home, but I've also lived in Germany. A true form-follows-function girl, I believe that a user's journey is just important as their destination. I specialize in identity and multicultural and multilingual projects, but also enjoy strong coffee, good books, and collecting stamps in my passport.</p>
+		</div>
+
+		<div class="row" id="last">
+			<h2>WORK</h2>
+		</div>
+
+		<div class="footer">
+			<div class="row">
+
+				<div class="medium-4 columns">
+					<h5>CONTACT</h5>
+					<hr>
+					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.</p>
+					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg">Let's talk, Liberace!</a>
+				</div>
+
+				<div class="medium-4 columns">
+					<h5>SPEAKING</h5>
+					<hr>
+					<a href="http://mtnwestjs.org/2015/" target="_blank">MountainWest JavaScript</a><br>
+					<a href="http://spacecityjs.com/" target="_blank">Space City JS</a>
+					
+					<h5>FOLLOW</h5>
+					<hr>
+					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg"> </a>
+
+					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg"> </a>
+
+					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg"> </a>
+				</div>
+
+				<div class="medium-4 columns impressum">
+					<h5>IMPRESSUM</h5>
+					<hr>
+					<p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Whitney Williams<br>
+						Coded with <span class="heart">♥</span> in Greenville, SC.
+					</p>
+					<p>Typeset in Lato and Fredericka the Great, powered by Google Fonts.</p>
+				</div>
+
+			</div>
 		</div>
 
 			<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
