roughed out about section

--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,31 @@
 		</div>
 
 		<div class="row nav">
-			<a class="contact-btn button" href="#skills">SKILLS</a>			
+			<a class="skills-btn button" href="#skills">SKILLS</a>			
 			<a class="work-btn button" href="#work">WORK</a>
 			<a class="about-btn button" href="#about">ABOUT</a>
+		</div>
+
+		<div class="row" id="about">
+			<h2>ABOUT</h2>
+
+			<div class="medium-4 columns">
+				<img src="images/profile-photo.png" class="profile-photo">
+			</div>
+			<div class="medium-8 columns">
+				<p class="first-p">Hi there! My name is Whitney.</p>
+
+				<p>I'm a designer-developer based in Greenville, South Carolina.</p>
+				
+				<p>A true form-follows-function girl, I develop clean, simple solutions that speak across boundaries. My favorite projects center around a strong brand identity, especially those with multicultural and multilingual aspects.</p>
+
+				<p>In 2014, I shifted my focus from design to development; this year, I want to help others join the tech community. You can follow along on my <a href="https://whitneyeliz.wordpress.com/" target="_blank">blog</a>, catch me on <a href="https://twitter.com/whitneyhacks" target="_blank">Twitter</a>, or see me <a href="#speak">speak</a>.</p>
+
+				<p>When I'm not coding, I enjoy strong coffee, good books, and international travel. You'll often find me chattering on about my time in Germany.</p>
+
+				<p>If you want to get in touch, you can <a href="mailto:wweliz@gmail.com">email me here</a>.</p>
+			</div>
+			
 		</div>
 
 		<div class="row" id="skills">
@@ -46,7 +68,7 @@
 			<div class="medium-4 columns">
 				<h5>WEB & DESIGN</h5>
 				<hr>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 						<li>Git</li>
 						<li>Sass</li>
@@ -56,7 +78,7 @@
 						<li>Typography</li>						
 					</ul>
 				</div>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 						<li>Lightroom</li>
 						<li>Photoshop</li>
@@ -72,7 +94,7 @@
 			<div class="medium-4 columns">
 				<h5>DEVELOPMENT</h5>
 				<hr>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 						<li>NPM</li>
 						<li>TDD</li>
@@ -85,7 +107,7 @@
 						<li>jQuery</li>
 					</ul>
 				</div>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 
 						<li>Yeoman</li>
@@ -105,14 +127,14 @@
 			<div class="medium-4 columns">
 				<h5>TEAM WORK</h5>
 				<hr>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 						<li>Copywriting</li>
 						<li>Social Media</li>
 						<li>Remote Work</li>
 					</ul>
 				</div>
-				<div class="small-6 tiny">
+				<div class="small-6 columns nopadding tiny">
 					<ul>
 						<li>Scope & Budget</li>
 						<li>Content Strategy</li>
@@ -134,16 +156,7 @@
 			<h2>WORK</h2>
 		</div>
 
-		<div class="row" id="about">
-			<h2>ABOUT</h2>
-			<p>My name is Whitney.</p>
-			<p>I develop clean, simple solutions that speak across boundaries.</p>
-			<p>I call Greenville, South Carolina home, but I've also lived in Germany. A true form-follows-function girl, I believe that a user's journey is just important as their destination. I specialize in identity and multicultural and multilingual projects, but also enjoy strong coffee, good books, and collecting stamps in my passport.</p>
-		</div>
-
-		<div class="row" id="last">
-			<h2>WORK</h2>
-		</div>
+		<div class="row" id="last"></div>
 
 		<div class="footer">
 			<div class="row">
@@ -155,7 +168,7 @@
 					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg">Let's talk, Liberace!</a>
 				</div>
 
-				<div class="medium-4 columns">
+				<div class="medium-4 columns" id="speak">
 					<h5>SPEAKING</h5>
 					<hr>
 					<a href="http://mtnwestjs.org/2015/" target="_blank">MountainWest JavaScript</a><br>
@@ -164,9 +177,7 @@
 					<h5>FOLLOW</h5>
 					<hr>
 					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg"> </a>
-
 					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg"> </a>
-
 					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg"> </a>
 				</div>
 
@@ -203,29 +214,12 @@
 			<!-- endbuild -->
 
 			<!-- build:js scripts/plugins.js -->
-			<script src="bower_components/foundation/js/foundation/foundation.abide.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.accordion.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.alert.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.clearing.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.dropdown.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.equalizer.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.interchange.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.joyride.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.offcanvas.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.orbit.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.reveal.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.slider.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.tab.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.tooltip.js"></script>
-			<script src="bower_components/foundation/js/foundation/foundation.topbar.js"></script>
 			<!-- endbuild -->
 
 			<!-- build:js scripts/main.js -->
 			<script src="scripts/jquery.fittext.js"></script>
-			<!--CDN link for the latest TweenMax-->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+				<!--CDN link for the latest TweenMax-->
+			<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 			<script src="scripts/main.js"></script>
 			<!-- endbuild -->
 	</body>
