added spinner effect to icons

--- a/app/index.html
+++ b/app/index.html
@@ -35,17 +35,20 @@
 		</div>
 
 		<div class="row nav">
+			<a class="about-btn button" href="#about">ABOUT</a>			
 			<a class="skills-btn button" href="#skills">SKILLS</a>			
 			<a class="work-btn button" href="#work">WORK</a>
-			<a class="about-btn button" href="#about">ABOUT</a>
 		</div>
 
 		<div class="row" id="about">
 			<h2>ABOUT</h2>
 
 			<div class="medium-4 columns">
-				<img src="images/profile-photo.png" class="profile-photo">
+				<p class="profile-photo">
+					<img src="images/profile-photo.png">
+				</p>
 			</div>
+			
 			<div class="medium-8 columns">
 				<p class="first-p">Hi there! My name is Whitney.</p>
 
@@ -53,13 +56,10 @@
 				
 				<p>A true form-follows-function girl, I develop clean, simple solutions that speak across boundaries. My favorite projects center around a strong brand identity, especially those with multicultural and multilingual aspects.</p>
 
-				<p>In 2014, I shifted my focus from design to development; this year, I want to help others join the tech community. You can follow along on my <a href="https://whitneyeliz.wordpress.com/" target="_blank">blog</a>, catch me on <a href="https://twitter.com/whitneyhacks" target="_blank">Twitter</a>, or see me <a href="#speak">speak</a>.</p>
+				<p>In 2014, I shifted my focus from design to development. This year, I want to help others join the tech community; you can follow along on my <a href="https://whitneyeliz.wordpress.com/" target="_blank">blog</a>, catch me on <a href="https://twitter.com/whitneyhacks" target="_blank">Twitter</a>, or see me <a href="#speak">speak</a>.</p>
 
-				<p>When I'm not coding, I enjoy strong coffee, good books, and international travel. You'll often find me chattering on about my time in Germany.</p>
-
-				<p>If you want to get in touch, you can <a href="mailto:wweliz@gmail.com">email me here</a>.</p>
-			</div>
-			
+				<p>When I'm not coding, I enjoy strong coffee, good books, and international travel. You'll often find me chattering about my time in Germany.</p>
+			</div>		
 		</div>
 
 		<div class="row" id="skills">
@@ -154,7 +154,8 @@
 
 		<div class="row" id="work">
 			<h2>WORK</h2>
-		</div>
+
+			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf"><img src="images/download-icon.svg" class="icon"> Check out my resume.</a></p>
 
 		<div class="row" id="last"></div>
 
@@ -165,7 +166,7 @@
 					<h5>CONTACT</h5>
 					<hr>
 					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.</p>
-					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg">Let's talk, Liberace!</a>
+					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg" class="icon">Let's talk, Liberace!</a>
 				</div>
 
 				<div class="medium-4 columns" id="speak">
@@ -176,9 +177,9 @@
 					
 					<h5>FOLLOW</h5>
 					<hr>
-					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg"> </a>
-					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg"> </a>
-					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg"> </a>
+					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" class="icon"> </a>
+					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" class="icon"> </a>
+					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" class="icon"> </a>
 				</div>
 
 				<div class="medium-4 columns impressum">
