--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,7 @@
 <!-- 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 72 72" enable-background="new 0 0 72 72" xml:space="preserve"><path id="cool" fill="#fff" d="M35.8 0c-19.9 0-36 16.1-36 36 0 19.9 16.1 36 36 36 19.9 0 36-16.1 36-36C71.8 16.1 55.7 0 35.8 0zM57 39.2l-18 18c-1.8 1.8-4.6 1.8-6.4 0l-18-18c-0.9-0.9-1.3-2-1.3-3.2 0-1.2 0.4-2.3 1.3-3.2 1.8-1.8 4.6-1.8 6.4 0l10.3 10.3V18c0-2.5 2-4.5 4.5-4.5 2.5 0 4.5 2 4.5 4.5v25.1l10.3-10.3c1.8-1.8 4.6-1.8 6.4 0C58.7 34.6 58.7 37.4 57 39.2z"/></svg> -->
 
 			 Check out my resume.</a></p>
+		</div>
 
 		<div class="row" id="last"></div>
 
