fixed jQuery selector issue for centering first line of "About Me" text

--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,9 @@
 		</div>
 
 		<div class="row nav">
-			<a class="about-btn button" href="#about">ABOUT</a>			
-			<a class="skills-btn button" href="#skills">SKILLS</a>			
-			<a class="work-btn button" href="#work">WORK</a>
+			<a class="about-btn button small" href="#about">ABOUT</a>			
+			<a class="skills-btn button small" href="#skills">SKILLS</a>			
+			<a class="work-btn button small" href="#work">WORK</a>
 		</div>
 
 		<div class="row" id="about">
