fixed media query for 2 column layout

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 			<div class="medium-4 columns">
 				<h5>WEB & DESIGN</h5>
 				<hr>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-5 2col">
 					<ul>
 						<li>Git</li>
 						<li>Sass</li>
@@ -78,7 +78,7 @@
 						<li>Typography</li>						
 					</ul>
 				</div>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-7 2col">
 					<ul>
 						<li>Lightroom</li>
 						<li>Photoshop</li>
@@ -94,7 +94,7 @@
 			<div class="medium-4 columns">
 				<h5>DEVELOPMENT</h5>
 				<hr>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-5 2col">
 					<ul>
 						<li>NPM</li>
 						<li>TDD</li>
@@ -107,7 +107,7 @@
 						<li>jQuery</li>
 					</ul>
 				</div>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-7 2col">
 					<ul>
 
 						<li>Yeoman</li>
@@ -127,14 +127,14 @@
 			<div class="medium-4 columns">
 				<h5>TEAM WORK</h5>
 				<hr>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-5 2col">
 					<ul>
 						<li>Copywriting</li>
 						<li>Social Media</li>
 						<li>Remote Work</li>
 					</ul>
 				</div>
-				<div class="small-6 columns nopadding tiny">
+				<div class="small-7 2col">
 					<ul>
 						<li>Scope & Budget</li>
 						<li>Content Strategy</li>
