added empty div with clear:both CSS to fix spacing issue between team work and languages divs

--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
 			<div class="medium-4 columns">
 				<h5>TEAM WORK</h5>
 				<hr>
+
 				<div class="small-5 2col">
 					<ul>
 						<li>Copywriting</li>
@@ -134,6 +135,7 @@
 						<li>Remote Work</li>
 					</ul>
 				</div>
+
 				<div class="small-7 2col">
 					<ul>
 						<li>Scope & Budget</li>
@@ -141,6 +143,8 @@
 						<li>Project Management</li>
 					</ul>					
 				</div>
+
+				<div class="small-12 empty"></div>
 			
 				<h5>LANGUAGES</h5>
 				<hr>
@@ -154,6 +158,10 @@
 
 		<div class="row" id="work">
 			<h2>WORK</h2>
+
+			<div class="medium-4 columns">cool</div>
+			<div class="medium-4 columns">cool</div>
+			<div class="medium-4 columns">cool</div>
 
 			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">
 
