improving performance by adding image height and width, installing gulp-uncss

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 
 			<div class="medium-4 columns">
 				<p class="profile-photo">
-					<img src="images/profile-photo.png">
+					<img src="images/profile-photo.png" height="246px" width="246px">
 				</p>
 			</div>
 			
@@ -179,7 +179,7 @@
 					<h5>CONTACT</h5>
 					<hr>
 					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.</p>
-					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg" class="icon">Let's talk, Liberace!</a>
+					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg" height="24px" width="24px" class="icon">Let's talk, Liberace!</a>
 				</div>
 
 				<div class="medium-4 columns" id="speak">
@@ -190,9 +190,9 @@
 					
 					<h5>FOLLOW</h5>
 					<hr>
-					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" class="icon"> </a>
-					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" class="icon"> </a>
-					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" class="icon"> </a>
+					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" height="24px" width="24px" class="icon"> </a>
+					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" height="24px" width="24px" class="icon"> </a>
+					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" height="24px" width="24px" class="icon"> </a>
 				</div>
 
 				<div class="medium-4 columns impressum">
