fixing issues with sparkle background not filling entire viewport

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 		<!--[if lt IE 10]>
 				<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
+		<div class="empty-top"></div>
 
 		<div class="herotext-container">
 			<p class="herotext">My name is <span class="FtG">Whitney</span>,</p>
@@ -165,8 +166,6 @@
 
 			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">
 
-<!-- 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 72 72" enable-background="new 0 0 72 72" xml:space="preserve"><path id="cool" fill="#fff" d="M35.8 0c-19.9 0-36 16.1-36 36 0 19.9 16.1 36 36 36 19.9 0 36-16.1 36-36C71.8 16.1 55.7 0 35.8 0zM57 39.2l-18 18c-1.8 1.8-4.6 1.8-6.4 0l-18-18c-0.9-0.9-1.3-2-1.3-3.2 0-1.2 0.4-2.3 1.3-3.2 1.8-1.8 4.6-1.8 6.4 0l10.3 10.3V18c0-2.5 2-4.5 4.5-4.5 2.5 0 4.5 2 4.5 4.5v25.1l10.3-10.3c1.8-1.8 4.6-1.8 6.4 0C58.7 34.6 58.7 37.4 57 39.2z"/></svg> -->
-
 			 Check out my resume.</a></p>
 		</div>
 
@@ -179,7 +178,7 @@
 					<h5>CONTACT</h5>
 					<hr>
 					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.</p>
-					<a href="mailto:wweliz@gmail.com"><img src="images/email-icon.svg" height="24px" width="24px" class="icon">Let's talk, Liberace!</a>
+					<a href="mailto:wweliz@gmail.com">Let's talk, Liberace!</a>
 				</div>
 
 				<div class="medium-4 columns" id="speak">
