removed div with id last -- no longer needed

--- a/app/index.html
+++ b/app/index.html
@@ -169,8 +169,8 @@
 			 Check out my resume.</a></p>
 		</div>
 
-		<div class="row" id="last"></div>
-
+<!-- 		<div class="row" id="last"></div>
+ -->
 		<div class="footer">
 			<div class="row">
 
