--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 			<p class="herotext"><span class="FtG">the Code Liberace</span>.</p>
 		</div>
 
-		<div class="row nav">
+		<div class="row centerText">
 			<a class="about-btn button small" href="#about">ABOUT</a>			
 			<a class="skills-btn button small" href="#skills">SKILLS</a>			
 			<a class="work-btn button small" href="#work">WORK</a>
@@ -46,7 +46,7 @@
 
 			<div class="medium-4 columns">
 				<p class="profile-photo">
-					<img src="images/profile-photo.png" height="246px" width="246px">
+					<img src="images/profile-photo.png" alt="profile photo" height="246px" width="246px">
 				</p>
 			</div>
 			
@@ -160,9 +160,34 @@
 		<div class="row" id="work">
 			<h2>WORK</h2>
 
-			<div class="medium-4 columns">cool</div>
-			<div class="medium-4 columns">cool</div>
-			<div class="medium-4 columns">cool</div>
+			<a href="#" data-reveal-id="myModal">Click Me For A Modal</a>
+
+			<div id="myModal" class="reveal-modal" data-reveal>
+				<h2>Awesome. I have it.</h2>
+				<p class="lead">Your couch.  It is mine.</p>
+				<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+				<a class="close-reveal-modal">&#215;</a>
+			</div>
+
+
+			<div class="medium-4 columns">
+				<img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"></a></li>
+		
+				<h5 class="centerText">WEB</h5>
+
+<!-- 				<p>Mice On Main is a webapp that uses geolocation to find the nine mice sculptures hidden along Main Street in Greenville, SC.</p>
+				<p>Build Summary: HTML, Sass, JavaScript, jQuery, Underscore, local camera access, Parse SDK, HTML5 geolocation API</p>
+				<p>This app is still in development, but you can check out my code so far on GitHub.</p> -->
+			</div>
+			<div class="medium-4 columns">
+				<img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px">
+				<h5 class="centerText">DESIGN</h5>
+			</div>
+			<div class="medium-4 columns">
+				<img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px">
+				<h5 class="centerText">PHOTOGRAPHY</h5>
+<!-- 				<p>All images captured with a Canon EOS Rebel XS and edited with Adobe Lightroom and/or Photoshop.</p> -->
+			</div>
 
 			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">
 
@@ -189,9 +214,9 @@
 					
 					<h5>FOLLOW</h5>
 					<hr>
-					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" height="24px" width="24px" class="icon"> </a>
-					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" height="24px" width="24px" class="icon"> </a>
-					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" height="24px" width="24px" class="icon"> </a>
+					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" alt="GitHub logo" height="24px" width="24px" class="icon"> </a>
+					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" alt="Twitter logo" height="24px" width="24px" class="icon"> </a>
+					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" alt="WordPress logo" height="24px" width="24px" class="icon"> </a>
 				</div>
 
 				<div class="medium-4 columns impressum">
@@ -219,14 +244,12 @@
 			<!-- build:js scripts/vendor.js -->
 			<!-- bower:js -->
 			<script src="bower_components/jquery/dist/jquery.js"></script>
-			<script src="bower_components/fastclick/lib/fastclick.js"></script>
-			<script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
-			<script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
 			<script src="bower_components/foundation/js/foundation.js"></script>
 			<!-- endbower -->
 			<!-- endbuild -->
 
 			<!-- build:js scripts/plugins.js -->
+			 <script src="bower_components/foundation/js/foundation/foundation.reveal.js"></script>
 			<!-- endbuild -->
 
 			<!-- build:js scripts/main.js -->
