--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/foundation/css/foundation.css" />
+		<link rel="stylesheet" href="bower_components/slick.js/slick/slick.css" />
+		<link rel="stylesheet" href="bower_components/slick.js/slick/slick-theme.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -160,42 +162,20 @@
 		<div class="row" id="work">
 			<h2>WORK</h2>
 
-			<a href="#" data-reveal-id="myModal">Click Me For A Modal</a>
-
-			<div id="myModal" class="reveal-modal" data-reveal>
-				<h2>Awesome. I have it.</h2>
-				<p class="lead">Your couch.  It is mine.</p>
-				<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-				<a class="close-reveal-modal">&#215;</a>
+			<div class="small-12">
+				<div class="slider">
+					<div> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
+					<div> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
+					<div> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
+					<div> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
+				</div>
 			</div>
 
-
-			<div class="medium-4 columns">
-				<img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"></a></li>
-		
-				<h5 class="centerText">WEB</h5>
-
-<!-- 				<p>Mice On Main is a webapp that uses geolocation to find the nine mice sculptures hidden along Main Street in Greenville, SC.</p>
-				<p>Build Summary: HTML, Sass, JavaScript, jQuery, Underscore, local camera access, Parse SDK, HTML5 geolocation API</p>
-				<p>This app is still in development, but you can check out my code so far on GitHub.</p> -->
-			</div>
-			<div class="medium-4 columns">
-				<img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px">
-				<h5 class="centerText">DESIGN</h5>
-			</div>
-			<div class="medium-4 columns">
-				<img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px">
-				<h5 class="centerText">PHOTOGRAPHY</h5>
-<!-- 				<p>All images captured with a Canon EOS Rebel XS and edited with Adobe Lightroom and/or Photoshop.</p> -->
-			</div>
-
-			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">
-
-			 Check out my resume.</a></p>
+			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">Check out my resume.</a></p>
 		</div>
 
-<!-- 		<div class="row" id="last"></div>
- -->
 		<div class="footer">
 			<div class="row">
 
@@ -244,18 +224,22 @@
 			<!-- build:js scripts/vendor.js -->
 			<!-- bower:js -->
 			<script src="bower_components/jquery/dist/jquery.js"></script>
+			<script src="bower_components/fastclick/lib/fastclick.js"></script>
+			<script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+			<script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
 			<script src="bower_components/foundation/js/foundation.js"></script>
+			<script src="bower_components/slick.js/slick/slick.min.js"></script>
 			<!-- endbower -->
 			<!-- endbuild -->
 
 			<!-- build:js scripts/plugins.js -->
-			 <script src="bower_components/foundation/js/foundation/foundation.reveal.js"></script>
+			<script src="scripts/jquery.fittext.js"></script>
+				<!--CDN link for TweenMax-->
+			<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>			
+			 <script src="bower_components/foundation/js/foundation/foundation.clearing.js"></script>
 			<!-- endbuild -->
 
 			<!-- build:js scripts/main.js -->
-			<script src="scripts/jquery.fittext.js"></script>
-				<!--CDN link for the latest TweenMax-->
-			<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 			<script src="scripts/main.js"></script>
 			<!-- endbuild -->
 	</body>
