cleaning git up slider and footer layout

--- a/app/index.html
+++ b/app/index.html
@@ -172,8 +172,6 @@
 					<div> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
 				</div>
 			</div>
-
-			<p class="download-resume">You like specifics? <a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">Check out my resume.</a></p>
 		</div>
 
 		<div class="footer">
@@ -182,8 +180,13 @@
 				<div class="medium-4 columns">
 					<h5>CONTACT</h5>
 					<hr>
-					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.</p>
-					<a href="mailto:wweliz@gmail.com">Let's talk, Liberace!</a>
+					<p>Does your website need a little sparkle? I am available to consult and develop with passionate teams across the globe.<br>
+						<a href="mailto:wweliz@gmail.com">Email the Code Liberace!</a>
+					</p>
+
+
+					<p class="download-resume">Still need to know more?<br>
+						<a href="WhitneyWilliamsResume.pdf" download="WhitneyWilliamsResume.pdf">Check out my resume.</a></p>
 				</div>
 
 				<div class="medium-4 columns" id="speak">
