working slick image slider

--- a/app/index.html
+++ b/app/index.html
@@ -164,12 +164,17 @@
 
 			<div class="small-12">
 				<div class="slider">
-					<div> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
-					<div> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
-					<div> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
-					<div> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
+					<div class="mice"> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div class="dice"> <img src="images/dice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div class="eskimo"> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
+					<div class="chomarat"> <img src="images/chomarat-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div class="hoowaki"> <img src="images/hoowaki-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div class="photography"> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
+					<div class="fluor"> <img src="images/tss-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
+					<div class="scansource"> <img src="images/scansource-front.png" alt="Design project photo" height="200px" width="350px"> </div>
+				</div>
+
+				<div class="small-12 small-centered columns project-text">
 				</div>
 			</div>
 		</div>
