removed image slider module and arranged projects into rows

--- a/app/index.html
+++ b/app/index.html
@@ -161,23 +161,123 @@
 
 		<div class="row" id="work">
 			<h2>WORK</h2>
+		</div>
 
-			<div class="small-12">
-				<div class="slider">
-					<div class="mice"> <img src="images/mice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div class="dice"> <img src="images/dice-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div class="eskimo"> <img src="images/eskimo-front.png" alt="Design project photo" height="200px" width="350px"> </div>
-					<div class="chomarat"> <img src="images/chomarat-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div class="hoowaki"> <img src="images/hoowaki-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div class="photography"> <img src="images/old-barn-front.png" alt="Photography project photo - barn" height="200px" width="350px"> </div>
-					<div class="fluor"> <img src="images/tss-front.png" alt="Mice on Main project photo" height="200px" width="350px"> </div>
-					<div class="scansource"> <img src="images/scansource-front.png" alt="Design project photo" height="200px" width="350px"> </div>
+		<div class="mice">
+			<div class="row">
+				<div class="small-12 medium-4 columns">
+					<img src="images/mice-on-main/mice-front.png" class="centerImage" alt="Mice on Main project photo" height="200px" width="350px">
 				</div>
 
-				<div class="small-12 small-centered columns project-text">
+				<div class="small-12 medium-8 columns">
+					<h5>Mice On Main The Game</h5>
+					<p>Mice On Main is a webapp that utilizes the HTML5 geolocation API to help visitors to Greenville find the mice sculptures hidden along Main Street in Greenville, SC.</p>
+					
+					<h6>Build Summary:</h6>
+					<p>HTML, Sass, JavaScript, jQuery, Underscore, local camera access, Parse SDK, HTML5 geolocation API</p>
+
+					<p>This app is still in development, but you can check out my code so far on <a href="https://github.com/wweliz/miceonmain" target="_blank">GitHub</a>.</p>
 				</div>
 			</div>
 		</div>
+
+		<div class="dice">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/dice/dice-front.png" class="centerImage" alt="AwesomeDice project photo" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>AwesomeDice</h5>
+					<p>AwesomeDice is a webapp that simulates rolling dice at a casino table. Users input the number of dice rolled and the number of sides on each die, and a then show a representation of the dice on the table.</p>
+
+					<h6>Build Summary:</h6>
+					<p>HTML, Sass, JavaScript</p>
+					<p>View the project <a href="http://wweliz.github.io/awesome-dice/" target="_blank">live</a> or check out my code on <a href="https://github.com/wweliz/awesome-dice" target="_blank">GitHub</a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="eskimo">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/eskimo/eskimo-front.png" class="centerImage" alt="English Theatre Berlin playbill close-up" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>English Theatre Berlin Playbill</h5>
+					<p>English Theatre Berlin is the German capital's only producing and presenting organization expressly dedicated to English as the working language. I designed and illustrated a poster for the play <i>Prophecy of a Nameless Eskimo</i>, which ran from April to May 2009.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="chomarat">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/chomarat/chomarat-front.png" class="centerImage" alt="Chomarat cutsheet close-up" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>Chomarat Rebrand</h5>
+					<p>The French textile maker Chomarat manufactures reinforcement materials for the composite and building industries. When the company expanded in 2009, they needed help implementing their new brand identity in the American market.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="hoowaki">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/hoowaki/hoowaki-front.png" class="centerImage" alt="Hoowaki logo close-up" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>Hoowaki Brand Development</h5>
+					<p>Hoowaki transforms the surfaces of common materials through micro technology on extruded and molded products and processes. I worked with the startups's founders to create a logo that was modern and fresh, but would allow for flexibility and innovation as the company expanded into new product fields and markets.</p>
+				</div>
+			</div>
+		</div>
+			
+		<div class="photography">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/photography/old-barn-front.png" class="centerImage" alt="old barn photo" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>Photography</h5>
+					<p>All images captured with a Canon EOS Rebel XS and edited with Adobe Lightroom and/or Photoshop.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="fluor">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/tss/tss-front.png" class="centerImage" alt="Fluor/TSS cutsheet" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>Fluor Government Group Cutsheet</h5>
+					<p>Fluor offers a full range of professional and technical support services for government clients and contractors through its Technical Support Services organization. TSS enhances clients’ operational effectiveness with support services in operations; nuclear services; health, safety, environment and quality (HSE&Q); project; and engineering support.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="scansource">
+			<div class="row">
+				<div class="medium-4 columns">
+					<img src="images/scansource/scansource-front.png" class="centerImage" alt="ScanSource rate card cover page close-up" height="200px" width="350px">
+				</div>
+
+				<div class="medium-8 columns">
+					<h5>ScanSource Marketing Rate Card</h5>
+					<p>ScanSource is a value-added distributor offering AIDC, point-of-sale, communications and physical security solutions; this rate card lists the price for print, online, and event marketing projects.</p>
+				</div>
+			</div>
+		</div>		
+
+<!--	<div class="scansource"> <img src="images/scansource-front.png" alt="Design project photo" height="200px" width="350px"> </div> -->
+
 
 		<div class="footer">
 			<div class="row">
