added row class to herotext-container div; changed herotext to be formatted as h1 rather than p

--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,10 @@
 		<![endif]-->
 		<div class="empty-top"></div>
 
-		<div class="herotext-container">
-			<p class="herotext">My name is <span class="FtG">Whitney</span>,</p>
-			<p class="herotext">but my friends call me</p>
-			<p class="herotext"><span class="FtG">the Code Liberace</span>.</p>
+		<div class="row herotext-container">
+			<h1 class="herotext">My name is <span class="FtG">Whitney</span>,</h1>
+			<h1 class="herotext">but my friends call me</h1>
+			<h1 class="herotext"><span class="FtG">the Code Liberace</span>.</h1>
 		</div>
 
 		<div class="row centerText">
